--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "nodemailer": "^6.2.1",
     "vue": "^2.6.10",
     "vue-i18n": "^8.11.2",
-    "vue-router": "^3.0.6"
+    "vue-router": "^3.0.6",
+    "vuetify": "^1.5.14"
   },
   "browserslist": [
     "> 1%",
